--- a/docs/style.css
+++ b/docs/style.css
@@ -2,9 +2,87 @@
     --primary: #1b2223;
     --white: #0ef6cc;
     --gray: #f4fefd;
-  }
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+}
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+body {
+font-family: sans-serif;
+font-weight: lighter;
+color: var(--white);
+background-color: var(--primary);
+height: 100vh;
+}
+.nav {
+border-bottom: 1px solid var(--gray);
+}
+.nav_checkbox {
+display: none;
+}
+.nav_toggle {
+position: absolute;
+cursor: pointer;
+margin: 0 1rem;
+right: 0;
+}
+.nav_toggle svg {
+width: 1rem;
+fill: var(--white);
+}
+.nav_toggle .close {
+display: none;
+}
+.nav_toggle .close,
+.nav_toggle .menu {
+margin-top: 0.3rem;
+}
+.nav_menu {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 1rem;
+}
+.nav_menu li {
+    display: none;
+    list-style-type: none;
+}
+.nav_menu li:first-child {
+    display: block;
+    margin-right: auto;
+}
+.nav_menu a {
+    color: inherit;
+    font-size: 1.1rem;
+    text-decoration: none;
+}
+.menu_logo {
+    height: 30px;
+}
+.menu_logo img {
+    height: 100%;
+}
+#nav_checkbox:checked ~ ul.nav_menu li {
+    display: block;
+}
+#nav_checkbox:checked ~ label.nav_toggle .close {
+    display: block;
+}
+#nav_checkbox:checked ~ label.nav_toggle .menu {
+    display: none;
+}
+@media only screen and (min-width: 560px) {
+    .nav_toggle {
+      display: none;
+    }
+  
+    .nav_menu {
+      flex-direction: row;
+    }
+  
+    .nav_menu li {
+      display: block;
+    }
   }
