--- a/docs/style.css
+++ b/docs/style.css
@@ -1,88 +1,244 @@
-:root {
-    --primary: #1b2223;
-    --white: #0ef6cc;
-    --gray: #f4fefd;
-}
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+    outline: none;
 }
 body {
-    font-family: sans-serif;
-    font-weight: lighter;
-    color: var(--white);
-    background-color: var(--primary);
-    height: 100vh;
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Open Sans', sans-serif;
 }
-.nav {
-    border-bottom: 1px solid var(--gray);
+section {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0px auto;
+    display: table;
+    position: relative;
 }
-.nav_checkbox {
+h1 {
+    margin: 0px auto;
+    display: table;
+    font-size: 26px;
+    padding: 40px 0px;
+    color: #002e5b;
+    text-align: center;
+}
+h1 span {
+    font-weight: 500;
+}
+header {
+    width: 100%;
+    display: table;
+    background-color: #fde428;
+    margin-bottom: 50px;
+}
+#logo {
+    float: left;
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #002e5b;
+    font-weight: 600;
+    padding: 20px 0px;
+}
+nav {
+    width: auto;
+    float: right;
+}
+nav ul {
+    display: table;
+    float: right;
+}
+nav ul li {
+    float: left;
+}
+nav ul li:last-child {
+    padding-right: 0px;
+}
+nav ul li a {
+    color: #002e5b;
+    font-size: 18px;
+    padding: 25px 20px;
+    display: inline-block;
+    transition: all 0.5s ease 0s;
+}
+nav ul li a:hover {
+    background-color: #002e5b;
+    color: #fde428;
+    transition: all 0.5s ease 0s;
+}
+nav ul li a:hover i {
+    color: #fde428;
+    transition: all 0.5s ease 0s;
+}
+nav ul li a i {
+    padding-right: 10px;
+    color: #002e5b;
+    transition: all 0.5s ease 0s;
+}
+.toggle-menu ul {
+    display: table;
+    width: 25px;
+}
+.toggle-menu ul li {
+    width: 100%;
+    height: 3px;
+    background-color: #002e5b;
+    margin-bottom: 4px;
+}
+.toggle-menu ul li:last-child {
+    margin-bottom: 0px;
+}
+input [
+    type=checkbox
+],
+label {
     display: none;
 }
-.nav_toggle {
-    position: absolute;
-    cursor: pointer;
-    margin: 0 1rem;
-    right: 0;
+.content {
+    display: table;
+    margin-bottom: 60px;
+    width: 900px;
 }
-.nav_toggle svg {
-    width: 1rem;
-    fill: var(--white);
+.content h2 {
+    font-size: 18px;
+    font-weight: 500;
+    color: #002e5b;
+    border-bottom: 1px solid #fde428;
+    display: table;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
-.nav_toggle .close {
-    display: none;
+.content p {
+    font-size: 14px;
+    line-height: 22px;
+    color: #7c7c7c;
+    text-align: justify;
 }
-.nav_toggle .close,
-.nav_toggle .menu {
-    margin-top: 0.3rem;
+footer {
+    display: table;
+    padding-bottom: 30px;
+    width: 100%;
 }
-.nav_menu {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    margin: 1rem;
+.social {
+    margin: 0px auto;
+    display: table;
+    display: table;
 }
-.nav_menu li {
-    display: none;
-    list-style-type: none;
+.social li {
+    float: left;
+    padding: 0px 10px;
 }
-.nav_menu li:first-child {
-    display: block;
-    margin-right: auto;
+.social li a {
+    color: #002e5b;
+    transition: all 0.5s ease 0s;
 }
-.nav_menu a {
-    color: inherit;
-    font-size: 1.1rem;
-    text-decoration: none;
+.social li a:hover {
+    color: #fde428;
+    transition: all 0.5s ease 0s;
 }
-.menu_logo {
-    height: 30px;
-}
-.menu_logo img {
-    height: 100%;
-}
-#nav_checkbox:checked ~ ul.nav_menu li {
-    display: block;
-}
-#nav_checkbox:checked ~ label.nav_toggle .close {
-    display: block;
-}
-#nav_checkbox:checked ~ label.nav_toggle .menu {
-    display: none;
-}
-@media only screen and (min-width: 560px) {
-    .nav_toggle {
-      display: none;
+@media only screen and (max-width: 1440px) {
+    section {
+        max-width: 95%;
     }
-  
-    .nav_menu {
-      flex-direction: row;
+}
+@media only screen and (max-width: 980px) {
+    header {
+        padding: 20px 0px;
     }
-  
-    .nav_menu li {
-      display: block;
+    #logo {
+        padding: 0px;
     }
-  }
+    input [
+        type=checkbox] { 
+        position: absolute; 
+        top: -9999px; 
+        left: -9999px; 
+        background:none;
+    }
+    input [
+        type=checkbox]:fous {
+        background:none;
+    }
+    label { 
+        float: right;
+        padding: 8px 0px;
+        display: inline-block;
+        cursor: pointer;
+    }
+    input [
+        type=checkbox
+    ]
+    :checked ~ nav {
+        display: block;
+    }
+
+    nav {
+        display: none;
+        position: absolute;
+        right: 0px;
+        top: 53px;
+        background-color: #002e5b;
+        padding: 0px;
+        z-index: 99;
+    }
+    nav ul {
+        width: auto;
+    }
+    nav ul li {
+        float: none;
+        padding: 0px;
+        width: 100%;
+        display: table;
+    }
+    nav ul li a {
+        color: #FFF;
+        font-size: 15px;
+        padding: 10px 20px;
+        display: block;
+        border-bottom: 1px solid rgba(225,225,225,0.1);
+    }
+    nav ul li a i {
+        color: #fde428;
+        padding-right: 13px;
+    }
+}
+
+@media only screen and (max-width: 980px) {
+    .content {
+        width: 90%;
+    }
+}
+@media only screen and (max-width: 568px) {
+    h1 {
+        padding: 25px 0px;
+    }
+    h1 span {
+        display: block;
+    }
+}
+@media only screen and (max-width: 480px) {
+    section {
+        max-width: 90%;
+    }
+}
+@media only screen and (max-width: 360px) {
+    h1 {
+        font-size: 20px;
+    }
+    label {
+        padding: 5px 0px;
+    }
+    #logo {
+        font-size: 20px;
+    }
+    nav {
+        top: 47px;
+    }
+}
+@media only screen and (max-width: 320px) {
+    h1 {
+        padding: 20px 0px;
+    }
+}
