--- a/docs/style.css
+++ b/docs/style.css
@@ -77,6 +77,9 @@ nav ul li a i {
     color: #002e5b;
     transition: all 0.5s ease 0s;
 }
+.toggle-1 {
+    display: none;
+}
 .toggle-menu ul {
     display: table;
     width: 25px;
@@ -93,7 +96,7 @@ nav ul li a i {
 input [
     type=checkbox
 ],
-label {
+input, label {
     display: none;
 }
 .content {
