--- a/docs/style.css
+++ b/docs/style.css
@@ -117,7 +117,7 @@ input, label {
 .content p {
     font-size: 14px;
     line-height: 22px;
-    color: #7c7c7c;
+    color: #002e5b;
     text-align: justify;
 }
 footer {
