--- a/docs/style.css
+++ b/docs/style.css
@@ -32,7 +32,8 @@ h1 span {
 header {
     width: 100%;
     display: table;
-    border: 2px solid #474747;
+    border-bottom: 2px solid #474747;
+    border-top: 2px solid #474747;
     margin-bottom: 50px;
 }
 #logo {
